<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:context="zup.com.activities.MovieDetailsActivity">

    <TextView
        android:text="@string/text_writer"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:id="@+id/writer"
        android:layout_alignParentStart="true"/>

    <TextView
        android:text="@string/text_director"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/writer"
        android:id="@+id/director"
        android:layout_alignParentStart="true"/>

    <TextView
        android:text="@string/text_awards"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/director"
        android:layout_marginTop="60dp"
        android:id="@+id/awards"
        android:layout_alignParentStart="true"/>



</RelativeLayout>
