<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:context="zup.com.activities.MovieDetailsActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/text_language"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/genre"
            android:layout_marginTop="60dp"
            android:id="@+id/language"
            android:layout_alignParentStart="true"/>

        <TextView
            android:text="@string/genre"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/actors"
            android:layout_marginTop="60dp"
            android:id="@+id/genre"
            android:layout_alignParentStart="true"/>

        <TextView
            android:text="@string/actors"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/movie_details"
            android:layout_marginTop="60dp"
            android:id="@+id/actors"
            android:layout_alignParentStart="true"/>

        <TextView
            android:text="@string/title_details"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:id="@+id/movie_details"
            android:layout_below="@+id/ratingBar"
            android:layout_alignParentStart="true"/>

        <TextView
            android:text="@string/text_title"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/movie_title"
            android:textSize="24dp"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:progressTint="@color/green"
            android:progressBackgroundTint="#939393"
            android:secondaryProgressTint="@color/green"
            android:numStars="5"
            android:stepSize="0.1"
            android:rating="1.3"
            android:id="@+id/ratingBar"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:layout_marginTop="18dp"
            android:layout_below="@+id/movie_title"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>



</android.support.v4.widget.NestedScrollView>
