<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="zup.com.zupfilmes.MovieDetails"
    tools:showIn="@layout/movie_detail">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="38dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingBottom="10dp"
            android:text="Descricao"
            android:id="@+id/description"
            android:layout_below="@+id/resumo"
            android:layout_alignParentStart="true"
            android:textSize="12sp"/>

        <ImageView
            android:layout_width="16dip"
            android:layout_height="16dip"
            app:srcCompat="@drawable/calendar"
            android:id="@+id/calendar"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/resumo"
            android:layout_alignParentStart="true"/>

        <TextView
            android:text="09/07/2003"
            android:textColor="#b4b4b4"
            android:layout_width="wrap_content"
            android:paddingLeft="6dp"
            android:paddingRight="12dp"
            android:layout_height="wrap_content"
            android:id="@+id/movieYear"
            android:layout_alignBottom="@+id/calendar"
            android:layout_toEndOf="@+id/calendar"
            android:textSize="12sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="30dp"
            android:paddingLeft="12dp"
            android:paddingBottom="10dp"
            android:paddingRight="12dp"
            android:background="@drawable/textview_border"
            android:id="@+id/resumo"
            android:text="@string/shortData"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:paddingLeft="12dp"
            android:paddingBottom="10dp"
            android:paddingRight="12dp"
            android:text="Director:"
            android:id="@+id/director"
            android:layout_below="@+id/rate"
            android:layout_alignParentStart="true"
            android:textSize="12sp"/>

        <TextView
            android:text="Almer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="12dp"
            android:textSize="12sp"
            android:id="@+id/directorPeople"
            android:layout_alignBaseline="@+id/director"
            android:layout_alignBottom="@+id/director"
            android:layout_alignParentEnd="true"/>

        <TextView
            android:text="@string/omdb_score"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:paddingLeft="12dp"
            android:paddingBottom="10dp"
            android:paddingRight="12dp"
            android:id="@+id/rate"
            android:textSize="12sp"
            android:layout_below="@+id/genre"
            android:layout_alignParentStart="true"/>

        <TextView
            android:text="8.8 / 10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scoreRate"
            android:paddingRight="12dp"
            android:textSize="12sp"
            android:layout_alignBaseline="@+id/rate"
            android:layout_alignBottom="@+id/rate"
            android:layout_alignParentEnd="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:paddingLeft="12dp"
            android:paddingBottom="10dp"
            android:paddingRight="12dp"
            android:textSize="12sp"
            android:text="@string/genre"
            android:id="@+id/genre"
            android:layout_below="@+id/description"
            android:layout_alignParentStart="true"/>

        <ImageView
            android:layout_width="16dip"
            android:layout_height="16dip"
            app:srcCompat="@drawable/awards"
            android:id="@+id/awards"
            android:layout_marginLeft="12dp"
            android:layout_alignBottom="@+id/awardsText"
            android:layout_below="@+id/director"
            android:layout_alignParentStart="true"/>

        <TextView
            android:text="Actors:"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/actors"
            android:paddingTop="10dp"
            android:paddingLeft="12dp"
            android:paddingBottom="10dp"
            android:paddingRight="12dp"
            android:textSize="12sp"
            android:layout_below="@+id/awardsText"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"/>

        <TextView
            android:text="awards"
            android:textSize="12sp"
            android:paddingLeft="12dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingRight="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/awardsText"

            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/awards"
            android:layout_below="@+id/director"/>

    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>
